--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<android.support.v7.widget.RecyclerView
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_recycler_view"
@@ -8,4 +8,4 @@
     android:scrollbars="vertical"
     >
 
-</android.support.v7.widget.RecyclerView>
+</ListView>
